tests/EnvironmentTests/data/FuncUndeclTest.xpl
node[] main() {
  this_func_was_never_declared(1, "test");
}
